<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_dashboard"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_home" />
        <item
            android:id="@+id/navigation_queue"
            android:icon="@drawable/queue"
            android:title="@string/title_queue" />
        <item
            android:id="@+id/navigation_receipts"
            android:icon="@drawable/ic_income"
            android:title="@string/title_receipts" />
        <item
            android:id="@+id/navigation_mpesa"
            android:icon="@drawable/ic_mobile_payment"
            android:title="@string/title_mpesa" />
        <!-- <item
             android:id="@+id/navigation_card_top"
             android:icon="@drawable/ic_home_black_24dp"
             android:title="@string/title_card_top" />
         <item
             android:id="@+id/navigation_card_pay"
             android:icon="@drawable/ic_baseline_email_24"
             android:title="@string/title_card" />-->
        <!-- <item
                    android:id="@+id/navigation_trips"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/title_trips" />-->


        <item
            android:id="@+id/cashTransactionsFragment"
            android:icon="@drawable/ic_cash_flow"
            android:title="Cash Transactions" />
        <item
            android:id="@+id/mpesaTransactionsFragment"
            android:icon="@drawable/ic_money_transfer"
            android:title="Mpesa Transactions" />
        <item
            android:id="@+id/navigation_transactions"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/title_transactions" />

        <item
            android:id="@+id/navigation_passenger"
            android:icon="@drawable/ic_baseline_follow_the_signs_24"
            android:title="@string/title_passenger"
            />


    </group>


</menu>